--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         /* div{float:left} */
         li { margin-top:3px;}
     </style>
-    <title> MAO Liwei</title>
+    <title>MaoLiwei</title>
 </head>
 
 <body>
