--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div style="width:900px; height:240px; padding-left: 10px; float: left; text-align: left;">
                 <br />
-                <font size="5px">毛立伟</font>
+                <font size="5px"<b>毛立伟</b></font>
                 <br />
                 <br />
                 <font face="Times New Roman">出生年月</font> ：1996年3月
