--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        }  
     </script>
     <style type="text/css">
-        body{text-align:center;font-family:"黑体"}
+        body{text-align:center;font-family:"微软雅黑"}
         a{text-decoration:none}
         a:hover{ color:#F00}
         /* div{float:left} */
