--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <font size="5px">学术论文</font>
             </div>
             <div style="width:1190px; height:auto; float: left; text-align: left; padding-left: 30px; padding-top: 20px;">
-                <li>  论工程教育学的学科建构及未来想象[J]. 大学与学科, 2023(03): 41-53.（CSSCI扩展版，第二作者）</a></li>
+                <li>  论工程教育学的学科建构及未来想象[J]. 大学与学科, 2023(03): 41-53.（CSSCI扩展版，第二作者&通讯作者）</a></li>
                 <br />
                 <li>  美国工程教育产教深度融合的经验与启示——以欧林工学院为例[J]. 现代教育管理, 2023(07): 55-65.（CSSCI扩展版，第二作者）</a></li>
                 <br />
@@ -89,7 +89,7 @@
                 <br />
                 <li>  专业博士教育研究20年:主题比较与路向探寻[J]. 研究生教育研究, 2022(01): 16-23+62.（CSSCI，第二作者）</a></li>
                 <br />
-                <li>  历史嬗变与路径重构：我国高等教育质量保障体系百年演进探究[J]. 海南师范大学学报(社会科学版), 2021(05): 62-69.（独作）</a></li>
+                <li>  历史嬗变与路径重构：我国高等教育质量保障体系百年演进探究[J]. 海南师范大学学报(社会科学版), 2021(05): 62-69.（独立作者）</a></li>
                 <br />
                 <li>  国内外终身教育研究：主题透视、热点识别与趋势研判[J]. 开放学习研究, 2021(02): 21-29.（第二作者）</a></li>
                 <br />
