--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 &nbsp &nbsp &nbsp 人才培养模式变革视域下工程教育新型组织的治理式及其运行机制研究（项目编号: 2022BKY118）
                 <br />
                 <br />
-                <li>  2022/09-2023/09  &nbsp &nbsp 中国工程院战略研究咨询重大项目 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 参与</a></li>
+                <li>  2022/09-2023/09  &nbsp &nbsp 中国工程院战略研究咨询重大项目 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 参与</a></li>
                 <br />
                 &nbsp &nbsp &nbsp 大变局下工程教育治理体系研究（项目编号：2022-XBZD-24）
                 <br />
                 <br />
-                <li>  2022/09-2024/12  &nbsp &nbsp 教育部人文社会科学项目 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 参与</a></li>
+                <li>  2022/09-2024/12  &nbsp &nbsp 教育部人文社会科学项目 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 参与</a></li>
                 <br />
                 &nbsp &nbsp &nbsp 大学治理现代化视野中的学科治理及其话语体系建构研究（项目编号：22YJA880039）
                 <br />
